--- a/repman/utils/printreptopdf/printreptopdf.dproj
+++ b/repman/utils/printreptopdf/printreptopdf.dproj
@@ -233,17 +233,23 @@
                 <Platform value="Win64">True</Platform>
             </Platforms>
             <Deployment Version="3">
-                <DeployFile LocalName="..\..\..\rpconf.inc" Configuration="Release" Class="ProjectFile"/>
-                <DeployFile LocalName="binrl64\printreptopdf" Configuration="Release" Class="ProjectOutput"/>
-                <DeployFile LocalName="printreptopdf.exe" Configuration="Debug" Class="ProjectOutput"/>
-                <DeployFile LocalName="printreptopdf" Configuration="Debug" Class="ProjectOutput"/>
-                <DeployFile LocalName="printreptopdf" Configuration="Debug" Class="ProjectOutput">
+                <DeployFile LocalName="binrl64\printreptopdf" Configuration="Release" Class="ProjectOutput">
                     <Platform Name="Linux64">
                         <RemoteName>printreptopdf</RemoteName>
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
                 <DeployFile LocalName="$(BDS)\Redist\iossimulator\libpcre.dylib" Class="DependencyModule"/>
+                <DeployFile LocalName="..\..\..\rpconf.inc" Configuration="Release" Class="ProjectFile"/>
+                <DeployFile LocalName="printreptopdf.exe" Configuration="Debug" Class="ProjectOutput"/>
+                <DeployFile LocalName="binrl64\printreptopdf" Configuration="Release" Class="ProjectOutput"/>
+                <DeployFile LocalName="printreptopdf" Configuration="Debug" Class="ProjectOutput">
+                    <Platform Name="Linux64">
+                        <RemoteName>printreptopdf</RemoteName>
+                        <Overwrite>true</Overwrite>
+                    </Platform>
+                </DeployFile>
+                <DeployFile LocalName="..\..\..\rpconf.inc" Configuration="Debug" Class="ProjectFile"/>
                 <DeployFile LocalName="$(BDS)\Redist\osx32\libcgunwind.1.0.dylib" Class="DependencyModule"/>
                 <DeployFile LocalName="$(BDS)\bin\Artwork\Windows\UWP\delphi_UwpDefault_150.png" Configuration="Debug" Class="UWP_DelphiLogo150"/>
                 <DeployFile LocalName="..\..\..\rpconf.inc" Configuration="Debug" Class="ProjectFile">
@@ -252,8 +258,14 @@
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
+                <DeployFile LocalName="printreptopdf" Configuration="Debug" Class="ProjectOutput"/>
                 <DeployFile LocalName="$(BDS)\bin\Artwork\Windows\UWP\delphi_UwpDefault_44.png" Configuration="Debug" Class="UWP_DelphiLogo44"/>
-                <DeployFile LocalName="..\..\..\rpconf.inc" Configuration="Debug" Class="ProjectFile"/>
+                <DeployFile LocalName="..\..\..\rpconf.inc" Configuration="Release" Class="ProjectFile">
+                    <Platform Name="Linux64">
+                        <RemoteDir>.\</RemoteDir>
+                        <Overwrite>true</Overwrite>
+                    </Platform>
+                </DeployFile>
                 <DeployFile LocalName="$(BDS)\Redist\iossimulator\libcgunwind.1.0.dylib" Class="DependencyModule"/>
                 <DeployClass Name="AdditionalDebugSymbols">
                     <Platform Name="OSX32">
