--- a/.gitignore
+++ b/.gitignore
@@ -202,3 +202,4 @@ getit/Reportman_PDF/Source/Delphi11/Reportman_PDF_nonshared.a
 *.RES
 getit/Reportman_PDF.zip
 getit/Reportman_PDF/Source/Examples/CreatePDF/Android64/
+getit/Source/Examples/CreatePDF/Android64/
